# CannotMax

./: .cursorrules  .gitignore  59_new.csv  6345ywz3(测试集).csv  HumanDataCheck.py  README.md  arknights.csv  auto_fetch.py  data_cleaning.py  data_nanWriter.py  data_preprocess_new.py  data_washer_new.py  find_monster_zone.py  loadData.py  log.txt  main.py  main_new.py  predict.py  pyproject.toml  recognize.py  requirements.txt  similar_history_match.py  specialmonster.py  test_model.py  test_models.py  train.py  val.py  数据打包请运行我.py
data/: 0428-11.csv  0428-21.csv  0429.csv  0429a.csv  0429b.csv  0429c.csv  0429d.csv  0429e.csv  0430-30人场合并版.csv  1.csv  2.csv  3.csv  4.csv  arknights1.csv  arknights2.csv  arknights3.csv  arknights4.csv  arknights_0428_1211.csv  arknights_old0428.csv  arknightsl.csv  易错题.csv
images/: 范围划定.txt
models/: update.md
数据合并并去重/: csv_merge.py  dou.txt  说明.txt
