[project]
name = "cannotmax"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "torch>=2.7.0",
  "torchvision>=0.22.0",
  "pytorch-triton-xpu>=3.3.0 ; sys_platform == 'win32' or sys_platform == 'linux'",
  "numpy>=1.21.0",
  "opencv-python>=4.5.3.56",
  "Pillow>=11.2.1",
  "keyboard>=0.13.5",
  "matplotlib>=3.4.3",
  "pandas>=1.3.0",
  "scikit-learn>=0.24.2",
  "psutil>=7.0.0",
  "onnxruntime~=1.21.0",
  "rapidocr~=2.0.7",
]

[tool.uv.sources]
torch = [
  { index = "pytorch-xpu", marker = "sys_platform == 'win32' or sys_platform == 'linux'" },
]
torchvision = [
  { index = "pytorch-xpu", marker = "sys_platform == 'win32' or sys_platform == 'linux'" },
]
pytorch-triton-xpu = [
  { index = "pytorch-xpu", marker = "sys_platform == 'win32' or sys_platform == 'linux'" },
]

[[tool.uv.index]]
name = "pytorch-xpu"
url = "https://download.pytorch.org/whl/xpu"
explicit = true
